2002-06-25  Richard Williamson  <rjw@apple.com>

        Disable the copy menu item when IFHTMLView has is key
        and has no selection.
        
        * WebView.subproj/IFHTMLView.mm:
        (-[IFHTMLView validateMenuItem:]):
        Disable menu if selection is empty.
        (-[IFHTMLView copy:]):
        Factored code that gets the bridge.
        * WebView.subproj/IFHTMLViewPrivate.h:
        Added _bridge.
        * WebView.subproj/IFHTMLViewPrivate.mm:
        (-[IFHTMLView _bridge]):
        We need to access the bridge from the view
        to get the part's selection.

2002-06-25  Chris Blumenberg  <cblu@apple.com>

	Remove downloaded file if cancelled.

        * Misc.subproj/IFDownloadHandler.mm:
        (-[IFDownloadHandler cancel]):

2002-06-25  Richard Williamson  <rjw@apple.com>

        Support for rudimentary plain text 'copy'.

        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):
        * WebView.subproj/IFHTMLView.mm:
        (-[IFHTMLView copy:]):
        * WebView.subproj/IFWebViewPrivate.h:
        * WebView.subproj/IFWebViewPrivate.mm:
        (-[IFWebView _controller]):

2002-06-25  Richard Williamson  <rjw@apple.com>

        Enabled progressive image loading code.
        
        * WebCoreSupport.subproj/IFImageRenderer.h:
        * WebCoreSupport.subproj/IFImageRenderer.m:
        (-[IFImageRenderer initWithSize:]):
        (-[IFImageRenderer incrementalLoadWithBytes:length:complete:]):
        * WebCoreSupport.subproj/IFImageRendererFactory.m:
        (-[IFImageRendererFactory imageRenderer]):

2002-06-25  Richard Williamson  <rjw@apple.com>

       Extended our text measurement rounding work-around for integer-float 
       mismatch to round on word boundaries as well as spaces.

        * WebCoreSupport.subproj/IFTextRenderer.m:
        (-[IFTextRenderer drawGlyphs:numGlyphs:atPoint:withColor:]):