@@ -1,3 +1,9 @@
+2002-06-26  Darin Adler  <darin@apple.com>
+
+        * WebView.subproj/IFHTMLView.mm:
+        (-[IFHTMLView validateUserInterfaceItem:]): Switch to this instead
+        of validateMenuItem: so that a Copy toolbar button would work.
+
 2002-06-25  Richard Williamson  <rjw@apple.com>
 
         Disable the copy menu item when IFHTMLView has is key
